Let players colour their sonic and key display names